syntax = "proto3";
package business;

option go_package = "/pb";
import "google/protobuf/timestamp.proto";

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 6;
}

message Business {
  int32 id = 1;
  string name = 2;
  string description = 3;
  string address = 4;
  string phone_number = 5;
  string website = 6;
  repeated BusinessUser employees = 7; 
  repeated SocialMedia some = 8;
  google.protobuf.Timestamp created_at = 9;
}

message BusinessUser {
  int32 business_id = 1;
  int32 user_id = 2;
  string role = 3; // owner, employee
  string name = 4;
  string email = 5;
}

message SocialMedia {
  string platform = 1;
  string url = 2;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message CreateUserResponse {
  User user = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  User user = 2;
}

// Uudet viestit
message GetUserRequest {
  int32 id = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

// gRPC-palvelu
service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);

  rpc GetUser(GetUserRequest) returns (User);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}
