syntax = "proto3";
package common;

option go_package = "github.com/Paukku/ajanvarausjarjestelma/backend/pb/common;common";
import "google/protobuf/timestamp.proto";

message User {
  string  uuid = 1;
  string name = 2;
  string email = 3;
  
  google.protobuf.Timestamp created_at = 100;
  google.protobuf.Timestamp updated_at = 101;
  google.protobuf.Timestamp deleted_at = 102;
}

message Business {
  string  uuid = 1;
  string name = 2;
  string description = 3;
  string address = 4;
  string phone_number = 5;
  string website = 6;
  repeated BusinessUser employees = 7; 
  repeated SocialMedia some = 8;
  google.protobuf.Timestamp created_at = 100;
  google.protobuf.Timestamp updated_at = 101;
  google.protobuf.Timestamp deleted_at = 102;
}

message BusinessUser {
  string  business_uuid = 1;
  string  user_uuid = 2;
  string role = 3; // owner, employee
  string name = 4;
  string email = 5;
}

message UserList { 
  repeated User users = 1;
}

message SocialMedia {
  string platform = 1;
  string url = 2;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  User user = 2;
}

// Uudet viestit
message GetUserRequest {
  string uuid = 1;
}

message UpdateUserRequest {
  string uuid = 1;
  string name = 2;
  string email = 3;
}

message DeleteUserRequest {
  string uuid = 1;
}

message GeneralResponse {
  bool success = 1;
  string message = 2;
}

message EmptyRequest {}
